--- a/compatibilidad-llantas.html
+++ b/compatibilidad-llantas.html
@@ -93,26 +93,53 @@
             <div class="accordion-faq">
                 <div class="accordion-faq-item">
                     <h2 class="accordion-faq-title" onclick="toggleFAQAccordion(this)">
-                        FAQ 1? <span>+</span>
+                        ¿Cómo saber si un neumático está homologado?<span>+</span>
                     </h2>
                     <div class="accordion-faq-content">
-                        <p>Lorem fistrum a wan condemor quietooor a wan ahorarr condemor pecador a gramenawer te va a hasé pupitaa. Jarl hasta luego Lucas quietooor de la pradera diodeno no te digo trigo por no llamarte Rodrigor apetecan condemor. Condemor te va a hasé pupitaa ahorarr la caidita no te digo trigo por no llamarte Rodrigor pecador a peich papaar papaar. Condemor caballo blanco caballo negroorl diodenoo a gramenawer pupita está la cosa muy malar me cago en tus muelas papaar papaar apetecan torpedo jarl. Te voy a borrar el cerito hasta luego Lucas a wan no te digo trigo por no llamarte Rodrigor sexuarl. Tiene musho peligro torpedo jarl está la cosa muy malar te voy a borrar el cerito llevame al sircoo a peich. Benemeritaar a wan no puedor apetecan a peich a peich. De la pradera quietooor ese pedazo de está la cosa muy malar diodeno.</p>
+                        <p>La homologación de neumáticos en la Unión Europea está regida por el Reglamento nº 117 de la Comisión Económica para Europa de las Naciones Unidas (CEPE).
+
+Para comprobar si tu neumático está homologado, busca una letra E seguida de un número dentro de un círculo y un código alfanumérico. La letra E y el número dentro del círculo indican que el neumático tiene homologación ECE, y el número indica el país de fabricación.
+
+El código numérico tiene estos significados:
+
+Los dos primeros dígitos representan la Regulación de Serie.
+Los siguientes números indican el tipo de aprobación ECE.
+Si el código termina con una "s", significa que cumple con los límites de ruido.</p>
                     </div>
                 </div>
                 <div class="accordion-faq-item">
                     <h2 class="accordion-faq-title" onclick="toggleFAQAccordion(this)">
-                        FAQ 2? <span>+</span>
+                        Neumáticos equivalentes y la ITV <span>+</span>
                     </h2>
                     <div class="accordion-faq-content">
-                        <p>Pecador caballo blanco caballo negroorl ese hombree la caidita la caidita tiene musho peligro apetecan torpedo. Fistro la caidita no puedor al ataquerl torpedo condemor ese pedazo de. Benemeritaar a peich torpedo no puedor va usté muy cargadoo la caidita.</p>
+                        <p>Si al momento de pasar la ITV tienes neumáticos equivalentes, no tendrás inconvenientes siempre que estén homologados.
+
+Durante la ITV revisan aspectos como:
+
+El índice de capacidad de carga.
+La categoría de velocidad.
+Que la llanta sea compatible con el neumático.
+Que no haya interferencias con otras partes del vehículo.
+Que el sentido de giro esté en su lugar.
+Que el diámetro nominal exterior no varíe más de un 3%.
+
+Si los neumáticos son equivalentes y homologados, no se considera una reforma del vehículo. En cambio, si no son equivalentes, necesitarás presentar un informe de conformidad y un certificado de taller en la ITV.
+
+</p>
                     </div>
                 </div>
                 <div class="accordion-faq-item">
                     <h2 class="accordion-faq-title" onclick="toggleFAQAccordion(this)">
-                        FAQ 3? <span>+</span>
+                        Durante la ITV, se comprobarán aspectos como:<span>+</span>
                     </h2>
                     <div class="accordion-faq-content">
-                        <p>Quietooor a peich por la gloria de mi madre pupita apetecan. Papaar papaar ese pedazo de quietooor no te digo trigo por no llamarte Rodrigor sexuarl. Diodeno te voy a borrar el cerito hasta luego Lucas te va a hasé pupitaa de la pradera jarl pecador la caidita. Me cago en tus muelas te va a hasé pupitaa mamaar llevame al sircoo diodenoo qué dise usteer.</p>
+                        <p>El índice de capacidad de carga
+La categoría de velocidad.
+Que la llanta sea la adecuada para el neumático.
+Que no existan interferencias entre el neumático y otras partes del vehículo.
+Que se respete el sentido de giro del neumático.
+Que haya una tolerancia admitida del diámetro nominal exterior del 3%.
+Incluir neumáticos equivalentes homologados no se considera una reforma del vehículo. En caso contrario, la colocación de neumáticos no equivalentes requiere una regularización, debiendo presentar en la estación de ITV un informe de conformidad y un certificado de taller.</p>
                     </div>
                 </div>
             </div>
